--- a/css/blog.css
+++ b/css/blog.css
@@ -53,24 +53,6 @@ main a {
 	color: #851944;
 }
 
-.citacoes {
-	background-color: #D9E5E3;
-	padding: 20px;
-	border: 10px solid #C2CCCA;
-	width: 250px;
-	box-sizing: border-box;
-	margin:20px 40px;
-
-}
-
-.fiat {
-	float: right;
-}
-
-.petrobras {
-	float:left;
-}
-
 cite {
 	float: right;
 	font-style: italic;
@@ -85,13 +67,13 @@ cite {
 }
 
 aside {
-	float: right;
 	width: 15%;
 	box-sizing: border-box;
 	border-bottom: 10px solid #000000;
 	border-left: 10px solid #000000;
-	position: relative;
+	position: absolute;
 	top: 310px;
+	right: 0;
 }
 
 
@@ -129,15 +111,15 @@ aside a {
 }
 
 .github {
-	background-image: url(img/github.png);
+	background-image: url(../img/github.png);
 }
 
 .twitter {
-	background-image: url(img/twitter.png);
+	background-image: url(../img/twitter.png);
 }
 
 .linkedin {
-	background-image: url(img/linkedin.png);
+	background-image: url(../img/linkedin.png);
 }
 nav a {
     color: #F2FFFC;
@@ -148,7 +130,7 @@ nav a {
 	color: #F2FFFC;
 	text-align: center;
 	clear: both;
-	padding: 35px;
+	padding: 20px;
 	width: 100%;
 	position: fixed;
 	bottom: 0;
