--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,13 @@
 .conteudo {
     width: 720px;
+    height: 700px;
     margin: auto;
-    padding: 30px
+    padding: 30px;
+    text-align:center;
+}
+
+.conteudo h1 {
+    font-size: 30px;
 }
 
 article {
